Fixed z-index and position relative missing

--- a/html/public/css/app.css
+++ b/html/public/css/app.css
@@ -42,8 +42,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
-    z-index: -2;
+    position: relative;
     font-family: "open sans bold", Arial, Helvetica, sans-serif;
 }
 
@@ -54,13 +53,14 @@
     align-items: center;
     gap: 2rem;
     padding: 2rem;
+    z-index: 2;
 }
 
 #particles-js {
     width: 100vw;
     height: 100%;
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     top: 0;
     left: 0;
 }
